--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -115,9 +115,9 @@ import Layout from '../layouts/Layout.astro';
           </div>
         </a>
         <a
-          href="/blog/ab-testing"
+          href="/blog/feature-adoption-discoverability"
           class="blog-card"
-          id="post-ab-testing"
+          id="post-feature-adoption-discoverability"
           style="text-decoration: none; color: inherit"
         >
           <img
