Fix image path for Before redesign screenshot
- Changed from 'public/Adoption-1.png' to '/Adoption-1.png'
- Images in Astro public folder should be referenced without 'public/' prefix
- This will make the image visible in the blog post

--- a/src/pages/blog/feature-adoption-discoverability.astro
+++ b/src/pages/blog/feature-adoption-discoverability.astro
@@ -87,7 +87,7 @@ import BlogPost from '../../layouts/BlogPost.astro';
     The most crucial change. We created a new flow that surfaced the "Loading Assistant" option directly on the first screen, alongside truck selection. We rolled this out as an A/B test to validate our hypothesis that this new placement was superior.
   </p>
   <p>
-    <img src="public/Adoption-1.png" alt="Before redesign screenshot" />
+    <img src="/Adoption-1.png" alt="Before redesign screenshot" />
     <em>Before redesign:</em> The loading assistant feature was placed in the last step of order flow, on the review and payment page among a lot of information to review, causing cognitive overload for the user.
   </p>
   <p>
