--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,10 +70,9 @@ import Layout from '../layouts/Layout.astro';
           class="project-card"
           style="text-decoration: none; color: inherit"
         >
-          <img
-            src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=1000&auto=format&fit=crop"
-            alt="Analytics dashboard screenshot"
-          />
+        <img src="/Adoption-Hero.png" 
+        alt="Doubling Feature Adoption by Solving for Discoverability" />
+
           <div class="project-card-content">
             <h3>Doubling Feature Adoption by Solving for Discoverability</h3>
             <p class="project-excerpt">
@@ -86,10 +85,10 @@ import Layout from '../layouts/Layout.astro';
               <span class="tag">Business Impact</span>
             </div>
           </div>
-        </a>
+        </a> 
         
         <!-- Project 2 -->
-        <a
+        <!-- <a
           href="/blog/mobile-app"
           class="project-card"
           style="text-decoration: none; color: inherit"
@@ -109,9 +108,9 @@ import Layout from '../layouts/Layout.astro';
               <span class="tag">User Testing</span>
             </div>
           </div>
-        </a>
+        </a> -->
         <!-- Project 3 -->
-        <a
+        <!-- <a
           href="/blog/design-system"
           class="project-card"
           style="text-decoration: none; color: inherit"
@@ -130,9 +129,9 @@ import Layout from '../layouts/Layout.astro';
               <span class="tag">Stakeholder Mngmt</span>
             </div>
           </div>
-        </a>
+        </a> -->
         <!-- Project 4 -->
-        <a
+        <!-- <a
           href="/blog/feature-adoption-discoverability"
           class="project-card"
           style="text-decoration: none; color: inherit"
@@ -148,7 +147,7 @@ import Layout from '../layouts/Layout.astro';
               <span class="tag">Product Growth</span>
             </div>
           </div>
-        </a>
+        </a> -->
       </div>
     </div>
   </section>
