Update contact email address to personal Gmail

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -161,7 +161,7 @@ import Layout from '../layouts/Layout.astro';
         Whether you have a question, a project idea, or just want to say
         hello, feel free to reach out.
       </p>
-      <a href="mailto:hello@maryam.design" class="contact-button">Say Hello</a>
+      <a href="mailto:Maryam.Akhyani@gmail.com" class="contact-button">Say Hello</a>
     </div>
   </section>
 </Layout>
