Update index page image and add About.jpg to public folder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import Layout from '../layouts/Layout.astro';
       </div>
       <div class="about-image-wrapper">
         <img
-          src="https://i.ibb.co/gFhb47v5/DSC00424.jpg"
+          src="/About.jpg"
           alt="Portrait of Maryam Akhyani"
           class="about-image"
         />
