Fix broken image by adding cache buster parameter

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import Layout from '../layouts/Layout.astro';
       </div>
       <div class="about-image-wrapper">
         <img
-          src="/About.jpg"
+          src="/About.jpg?v=1"
           alt="Portrait of Maryam Akhyani"
           class="about-image"
         />
