--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -302,6 +302,10 @@ import Layout from '../layouts/Layout.astro';
     flex: 2;
   }
 
+  #about .about-text p {
+    text-align: justify;
+  }
+
   #about .about-image-wrapper {
     flex: 1;
     position: relative;
