Perfect center alignment: image and text now align at same vertical center

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -315,16 +315,13 @@ import Layout from '../layouts/Layout.astro';
     
     #about .about-content {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       gap: 3rem;
       min-height: 400px;
     }
     
     #about .about-text {
       flex: 2;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
     }
     
     #about .about-image-wrapper {
