Fine-tune image alignment: position image with middle of text paragraph

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -315,9 +315,8 @@ import Layout from '../layouts/Layout.astro';
     
     #about .about-content {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       gap: 3rem;
-      min-height: 400px;
     }
     
     #about .about-text {
@@ -328,11 +327,11 @@ import Layout from '../layouts/Layout.astro';
       flex: 1;
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100%;
+      align-items: flex-start;
       position: static;
       margin: 0;
       padding: 0;
+      padding-top: 2rem;
     }
     
     #about .about-image {
